# layercake

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BENCHMARKS.md  BLOCKERS.md  BRANCHING_AND_CHERRYPICK.md  BREAKTHROUGH_DOMINANCE_PROTOCOL.md  BREAKTHROUGH_SWEEP.md  BYTE_NEXTGEN_LADDER_100M_225M_500M.md  BYTE_PATCH_LAYERCAKE.md  CITATION.cff  CLAIMS.md  CONTRIBUTING.md  DATA.md  DEPLOYMENT_QUICKSTART.md  DOMAIN_PASTE.md  DOMINANCE_GATES.md  EMBER_ROAD_BYTE_DOMAIN_WORKFLOW.md  EXPERIMENT_RESULTS.md  FAST_225M_CURRICULUM_PLAN.md  GITHUB_RELEASE_CHECKLIST.md  LICENSE  MICRO_FRONTIER_FINDINGS_2026-06-29.md  MODEL_COMMITS.md  MOONSHOT_CLAIMS_AND_LIMITATIONS.md  Makefile  NEXT_STEPS.md  NORTHSTAR_V22_RELEASE.md  NORTHSTAR_V23_ROUTED_CAKES.md  ORCHESTRATION.md  PREVIEW_GUIDED_TRAINING.md  PRODUCTION_TRAINING_PLAN.md  README.md  ROADMAP.md  ROLLBACK.md  ROLLING_TRAINING.md  RUBRIC.md  RUBRIC_TRAINING.md  SCALING_PROTOCOL.md  SECURITY.md  (+16 more)
archive/: README.md
artifacts/: layercake_v22_patch_int8.manifest.json
configs/: 150M.json  350M.json  48M.json  bpe_500m_transformer_moonshot_quickrun.json  breakthrough_equal_15m_bpe_v4.json  breakthrough_equal_15m_layercake_v4.json  byte_100m_core_phaseA_curriculum.json  byte_100m_core_phaseB_redpajama.json  byte_100m_sparse_state_moonshot_quickrun.json  byte_225m_core_phaseA_curriculum.json  byte_225m_core_phaseB_polish.json  byte_500m_core.json  byte_500m_core_phase1_fluency.json  byte_500m_core_phase2_gameblend.json  byte_500m_core_quickrun.json  byte_500m_sparse_state_quickrun.json  game_companion_scale_bpe_2m.json  layercake_mobile_25m.json  (+171 more)
(+2344 files in other folders)
